# Tello_Basic

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  detect_aruco.cpp  detect_aruco_for_data_collection.cpp  read.cpp  tello_vision_test.cpp
config/: sensor_setting.yaml  system_config.yaml
include/: common.h  system.h
include/camera/: brown_conrady.h  camera.h  pinhole.h
include/marker/: aruco_detector.h
include/port/: config.h  setting.h
src/: CMakeLists.txt  system.cpp
src/camera/: camera.cpp
src/marker/: aruco_detector.cpp
src/port/: config.cpp  setting.cpp
